--- a/traffic/explore.ipynb
+++ b/traffic/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -16,13 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "def _common_replacements(input_str):\n",
     "    \n",
@@ -49,10 +57,41 @@
     "\n",
     "    data_dropped = data_prime.drop(cols_to_remove, axis =1)\n",
     "    \n",
-    "    data_dropped['Street'] = all_d['Street'].apply(_common_replacements)\n",
+    "    data_dropped['Street'] = data_dropped['Street'].apply(_common_replacements)\n",
+    "    data_prime_prime = data_dropped.sort_values(\n",
+    "        by = ['Total Passing Vehicle Volume'],\n",
+    "        ascending = False).reset_index()\n",
     "    \n",
-    "    return data_dropped"
+    "    data_prime_prime_prime = data_prime_prime.drop([data_prime_prime.columns[0]], axis = 1)\n",
+    "    \n",
+    "    return data_prime_prime_prime\n",
+    "\n",
+    "data = read_data()\n",
+    "#data.head()\n",
+    "#data.columns\n",
+    "\n",
+    "#data['Latitude'].mean(), data['Longitude'].mean()\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
