--- a/traffic/explore.ipynb
+++ b/traffic/explore.ipynb
@@ -2,21 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 193,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -27,52 +13,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "Using matplotlib backend: TkAgg\n"
      ]
     }
    ],
    "source": [
-    "def _common_replacements(input_str):\n",
+    "%matplotlib\n",
+    "from matplotlib.pyplot import imshow\n",
+    "import numpy as np\n",
+    "from PIL import Image, ImageFilter, ImageEnhance\n",
+    "from IPython.display import Image as display_image\n",
+    "from os import listdir, makedirs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['easy_traffic.png',\n",
+       " 'easy_untouched.png',\n",
+       " 'heavy_untouched.png',\n",
+       " 'medium_traffic.png',\n",
+       " 'medium_untouched.png',\n",
+       " 'rsz_heavy_traffic.png']"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pics = [x for x in listdir(\".\") if x.endswith((\".png\", \".jpeg\"))]\n",
+    "pics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "#display_image(filename=\"m.png\")\n",
+    "im  = Image.open('heavy_untouched.png', 'r')\n",
+    "\n",
+    "def crop_im(im):\n",
     "    \n",
-    "    replacements = (\n",
-    "        (\"Street\", \"St\"),\n",
-    "        (\"Avenue\", \"Ave\"),\n",
-    "        (\"Road\", \"Rd\"),\n",
-    "        (\"Boulevard\", \"Blvd\"),\n",
-    "        (\"Drive\", \"Dr\")\n",
-    "    )\n",
+    "    w, h = im.width, im.height\n",
+    "    crop_region = (0,20,w,w - 25)\n",
+    "\n",
+    "    return im.crop(crop_region)\n",
+    "\n",
+    "def resize_im(im):\n",
     "    \n",
-    "    for (to_replace, to_replace_with) in replacements:\n",
+    "    w, h = im.width, im.height\n",
+    "    \n",
+    "    resize_tuple = (30, 30)\n",
+    "    \n",
+    "    return im.resize(resize_tuple)\n",
+    "\n",
+    "def color_image(im, r2, g2, b2):\n",
+    "\n",
+    "    data = np.array(im)\n",
+    "\n",
+    "    red, green, blue = [data[:,:,i] for i in range(3)]\n",
+    "\n",
+    "    data[:,:,:3] = [r2,g2,b2]\n",
+    "\n",
+    "    return Image.fromarray(data)\n",
+    "\n",
+    "def write_images(file, hold_constant):\n",
+    "    \n",
+    "    im = Image.open(file, 'r')\n",
+    "    resized = resize_im(im)\n",
+    "    \n",
+    "    name, ext = file.split(\".png\",1)\n",
+    "    \n",
+    "    folder_name = file.split(\"_\", 1)[0]\n",
+    "    makedirs(folder_name, exist_ok=True)\n",
+    "    \n",
+    "    # 33, 226, 255\n",
+    "     \n",
+    "    for i in range(5):\n",
+    "\n",
+    "        values = i * 40\n",
     "        \n",
-    "        input_str = input_str.replace(to_replace, to_replace_with)\n",
+    "        if hold_constant == 'r':\n",
+    "            new_image = color_image(resized, 255, values, values)\n",
+    "        elif hold_constant == 'g':\n",
+    "            new_image = color_image(resized, values, 255, values)\n",
+    "        else:\n",
+    "            new_image = color_image(resized, values, values, 255)\n",
+    "            \n",
+    "        new_image.save(f'{folder_name}/{name}_{i}.png')\n",
+    "\n",
+    "def write_all_images():\n",
+    "    \n",
+    "    for prefix, c in ((\"easy\",'g'), (\"medium\", 'b'), (\"heavy\", 'r')):\n",
     "        \n",
-    "    return input_str\n",
+    "        file_name = f'{prefix}_untouched.png'\n",
+    "        \n",
+    "        write_images(file_name, c)\n",
     "\n",
-    "def read_data():\n",
-    "\n",
-    "    data = pd.read_csv(\"traffic.csv\")\n",
-    "    data_prime = data.copy()\n",
-    "    cols = data_prime.columns\n",
-    "    cols_to_remove = [cols[0], cols[1], cols[3], cols[5], cols[8]]\n",
-    "\n",
-    "    data_dropped = data_prime.drop(cols_to_remove, axis =1)\n",
-    "    \n",
-    "    data_dropped['Street'] = data_dropped['Street'].apply(_common_replacements)\n",
-    "    data_prime_prime = data_dropped.sort_values(\n",
-    "        by = ['Total Passing Vehicle Volume'],\n",
-    "        ascending = False).reset_index()\n",
-    "    \n",
-    "    data_prime_prime_prime = data_prime_prime.drop([data_prime_prime.columns[0]], axis = 1)\n",
-    "    \n",
-    "    return data_prime_prime_prime\n",
-    "\n",
-    "data = read_data()\n",
-    "#data.head()\n",
-    "#data.columns\n",
-    "\n",
-    "#data['Latitude'].mean(), data['Longitude'].mean()\n",
-    "\n",
-    "\n"
+    "#write_all_images()\n",
+    "resize_im(Image.open(\"star.png\")).save('star_prime.png')"
    ]
   },
   {
